try to CodeDeploy without S3

--- a/checker.html
+++ b/checker.html
@@ -1,3 +1,4 @@
-にゃーん！！ on KUSANAGI
-
-.circleci/config.ymlを書き初め
+にゃーん！！ on KUSANAGI<br>
+<br>
+.circleci/config.ymlを書き初め<br>
+CodeDeployはS3からではなくGithubからファイル取得しました<br>
